k8s/SVC-Front.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: guestbook-frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30007
  - name: metrics        # ← new port for apache-exporter
    port: 9117
    targetPort: 9117
  selector:
    app: guestbook
    tier: frontend
